syntax = "proto3";
package ec_pb;
option go_package = "./ec_store_pb";

message Frag{
  string full_path = 1;
  string set = 2;
  string fid = 3;
  uint64 file_size = 4;
  string oldEC_id = 5;
}

message Shard {
  string host = 1;
  repeated Frag frags = 2;
  bytes md5 = 3;
}

message Suite{
  string ECid = 1;
  string full_path = 2;
  string set = 3;
  string orig_host = 4;
  string orig_fid = 5;
  uint64 file_size = 6;
  string bak_host = 7;
  string bak_fid = 8;
  string next = 9;
  uint64 data_shards = 10;
  repeated Shard shards = 11;
}
